// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column classes when className and columnClasses is passed renders both classes 1`] = `
<div
  className="carbon-column myClass myColumnClasses carbon-column--offset-0 carbon-column--span-1 carbon-column--align-left"
>
  <span />
</div>
`;

exports[`Column classes when className is passed renders a passed className 1`] = `
<div
  className="carbon-column myclass carbon-column--offset-0 carbon-column--span-1 carbon-column--align-left"
>
  <span />
</div>
`;

exports[`Column classes when columnClasses is passed renders a passed columnClasses 1`] = `
<div
  className="carbon-column myColumnClasses carbon-column--offset-0 carbon-column--span-1 carbon-column--align-left"
>
  <span />
</div>
`;

exports[`Column options columnAlign renders a columnAlign class 1`] = `
<div
  className="carbon-column carbon-column--offset-0 carbon-column--span-1 carbon-column--align-left"
>
  <span />
</div>
`;

exports[`Column options columnDivide renders a columnDivide class 1`] = `
<div
  className="carbon-column carbon-column--offset-0 carbon-column--span-1 carbon-column--align-left carbon-column--column-divide"
>
  <span />
</div>
`;

exports[`Column options columnOffset renders a columnOffset class 1`] = `
<div
  className="carbon-column carbon-column--offset-2 carbon-column--span-1 carbon-column--align-left"
>
  <span />
</div>
`;

exports[`Column options columnSpan renders a columnSpan class 1`] = `
<div
  className="carbon-column carbon-column--offset-0 carbon-column--span-2 carbon-column--align-left"
>
  <span />
</div>
`;

exports[`Column renders children 1`] = `
<div
  className="carbon-column carbon-column--offset-0 carbon-column--span-1 carbon-column--align-left"
>
  <span />
</div>
`;
